afr & zrr dissolved, css transition sidepanel + collapse button repaired

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -44,7 +44,8 @@ button:hover {
 .github-btn {
 	background: #096d7f;
 	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;:
+	border-bottom-right-radius: 5px;
+	border-bottom: none;
 }
 
 /* bouton du bas "a propos" et "github" */
@@ -75,11 +76,12 @@ a {
 #sidebar-panel {
 	opacity:.8;
   position:absolute;
-  width: 0%;
+  width: 0px;
   color: white;
   opacity: 0.9;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: scroll;
-  transition: width 0.3s ease ;
-  border-radius: 0 5px 5px 0px;
+  transition: width 0.35s ease-in-out ;
+	border-radius: 5px;
+  /* border-radius: 5px 5px 5px 5px; */
 }
